tests/invalid/type/cast_byte_int_256.pts
function main() : void {
    byte b = (byte)(int)256;
}
